<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">CLICK TO START</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="edit_messagemin">Enter minutes here</string>
    <string name="edit_messagesec">Enter seconds here</string>
    <string name="edit_messagemilli">Enter Milli here</string>
    <string name="timer_initial">00:00:00</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="stop_timer">Stop</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>

</resources>
