<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="talha.timer.talha.mytimerapp.TimerActivity"
    tools:showIn="@layout/activity_timer"
    android:id="@+id/content"
    android:background="#ffffff"
    >
   

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayout"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"

    >
    <talha.timer.talha.mytimerapp.TimerDraw
        android:layout_width="298dp"
        android:layout_height="400dp"
        custom:circleColor="#ff0099"
        custom:circleLabel="Hello"
        custom:labelColor="#ffff66"


        android:id="@+id/view"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/timer_initial"
        android:id="@+id/timerVal"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

</RelativeLayout>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:id="@+id/button2"
        android:onClick="startTimer"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pause_timer"
        android:id="@+id/button3"
        android:onClick="pauseTimer"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout"
        android:background="@drawable/my_button_bg"

        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_timer"
        android:id="@+id/button4"
        android:onClick="stopTimer"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_button_bg"

        />


</RelativeLayout>
